Added loading screen animation
Added dependencie for Lottiefiles and animation.
Added animation on loading screen.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,7 @@ dependencies {
 
     // Kotlin
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
+
+    //Lottiefiles
+    implementation "com.airbnb.android:lottie:6.0.1"
 }
